chordiagram css finally fixed for non overlapping with the rest of the page!
metricgraphics minor css changes

--- a/inst/extdata/chorddiag.css
+++ b/inst/extdata/chorddiag.css
@@ -21,25 +21,25 @@ body, h1, h2, h3, h4, h5, h6, .descr, td {
 #cite a { text-decoration: none; color: #821122; }
 
 #footer {
-    font-size: 10.5px; color: #9B9B9B; 
-    margin-top:8px; 
+    font-size: 10.5px; color: #9B9B9B;
+    margin-top:8px;
     background-color: #F6F6F6;
     padding: 8px;
 }
 #footer a { text-decoration: none; color: #821122; }
 
-#htmlwidget_container {
+.container {
     width: 100%;
-    padding-top: 12%;
+    height: 100%;
     position: relative;
 }
 
 .descr {
- font-size: 1.1em; 
+ font-size: 1.1em;
  color: #707070;
  line-height: 120%;
 }
-     
+
 h1 {
    font-size:3.3em;
 }
@@ -52,7 +52,7 @@ h2 {
 
 h3 {
    font-size:1.2em;
-   color: #696969; 
+   color: #696969;
    line-height: 80%;
 }
 
@@ -67,7 +67,7 @@ h5 {
 h6 {
    font-size:0.8em;
 }
-    
+
 
 a:visited {
    color: rgb(50%, 0%, 50%);
